@@ -16,6 +16,8 @@ ext.javafx = false
 ext.jzy3d = true
 ext.manif_addopens = 'java.base/sun.nio.ch java.base/java.io java.desktop/sun.awt java.desktop/javax.swing.text.html java.desktop/sun.swing java.base/jdk.internal.loader jdk.nashorn.internal.runtime'
 ext.run_addopens = 'java.base/jdk.internal.loader=ALL-UNNAMED'
+ext.run_addexports = "java.desktop/sun.awt=ALL-UNNAMED"
+
 sourceCompatibility = JavaVersion.VERSION_11
 ext.hdf5 = '1.10' // '1.10' or '1.8
 
@@ -336,7 +338,8 @@ task(debug, dependsOn: 'classes', type: JavaExec) {
     debug true
     executable=java_exec_jdk
     jvmArgs = [
-        "--add-opens", run_addopens
+        "--add-opens", run_addopens,
+        "--add-exports", run_addexports
     ]
 }
 
@@ -350,7 +353,8 @@ task(run, dependsOn: 'classes', type: JavaExec) {
     debug false
     executable=java_exec_jdk
     jvmArgs = [
-        "--add-opens", run_addopens
+        "--add-opens", run_addopens,
+        "--add-exports", run_addexports        
     ]
 }
 
